# IOC5191_machine-learning

./: .gitignore  .gitmodules  Pipfile  README.md  pyproject.toml
HW01/: HW01_309553002.py  README.md
HW02/: HW02_1_NaiveBayes_309553002.py  HW02_2_OnlineLearning_309553002.py  README.md
HW03/: HW03_1_RandomDataGenerator.py  HW03_2_SequentialEstimator.py  HW03_3_BaysianLinearRegression.py  README.md
HW04/: HW04_1_LogisticRegression.py  HW04_2_EM_Algorithm.py  README.md
HW05/: HW05_1_GaussianProcess.py  HW05_2_SVM.py  README.md
HW06/: HW06_KernelKMeans.py  HW06_SpectralClustering.py  README.md  script.py
HW07/: HW07_1_KernelEigenFaces.py  HW07_2_tSNE.py  README.md  script.py  tsne.py
