[tool.poetry]
name = "nctu-machine-learning"
version = "0.1.0"
description = ""
authors = ["Yu-Kai Lin <stephen359595@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "nctu_machine_learning"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
scipy = "^1.9.3"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
imageio = "^2.22.4"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
